sql/hive/src/test/resources/ql/src/test/queries/negative/missing_overwrite.q
FROM src
INSERT TABLE dest1 SELECT '1234', src.value WHERE src.key < 100
